# textmachine

./: .gitignore  Cargo.toml  default.nix  flake.nix
.github/workflows/: build-and-test.yml
resources/: filters.lua
src/: lib.rs  main.rs
src/machine/: errors.rs  generator.rs  input.rs  mod.rs  output.rs  tree.rs  ui.rs
test-inputs/: main.md  main.textmachine.page.md  main.textmachine.prefix
test-inputs/dummy/: file.txt
test-inputs/p1/: p1.textmachine.page.md
test-inputs/p1/p11/: p11.textmachine.page.md
test-inputs/p2/: p2.textmachine.page.md
test-inputs/p3/: p3.textmachine.page.md
test-inputs/page1/: p1.md
test-inputs/page2/: p2.md
